// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getReadmeContents cra allows returning a readme with cypress 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn start\`

## Unit Tests

- Run \`yarn test\`

## E2E Tests

- Run the app
- In another terminal, run \`yarn cypress\`
"
`;

exports[`getReadmeContents cra allows returning a readme without cypress 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn start\`

## Unit Tests

- Run \`yarn test\`
"
`;

exports[`getReadmeContents docusaurus allows returning a readme with cypress 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn start\`

## E2E Tests

- Run the app
- In another terminal, run \`yarn cypress\`
"
`;

exports[`getReadmeContents docusaurus allows returning a readme without cypress 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn start\`
"
`;

exports[`getReadmeContents expo allows returning a readme with both unit testing and cypress 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

Optional:

- To run on Android Emulator, [Android Studio](https://developer.android.com/studio)
- To run on iOS Simulator, [Xcode](https://developer.apple.com/xcode/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn start\`

## Unit Tests

- Run \`yarn test\`

## E2E Tests

- Run the app
- In another terminal, run \`yarn cypress\`
"
`;

exports[`getReadmeContents expo allows returning a readme with cypress 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

Optional:

- To run on Android Emulator, [Android Studio](https://developer.android.com/studio)
- To run on iOS Simulator, [Xcode](https://developer.apple.com/xcode/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn start\`

## E2E Tests

- Run the app
- In another terminal, run \`yarn cypress\`
"
`;

exports[`getReadmeContents expo allows returning a readme with unit testing 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

Optional:

- To run on Android Emulator, [Android Studio](https://developer.android.com/studio)
- To run on iOS Simulator, [Xcode](https://developer.apple.com/xcode/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn start\`

## Unit Tests

- Run \`yarn test\`
"
`;

exports[`getReadmeContents expo allows returning a readme without any testing 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

Optional:

- To run on Android Emulator, [Android Studio](https://developer.android.com/studio)
- To run on iOS Simulator, [Xcode](https://developer.apple.com/xcode/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn start\`
"
`;

exports[`getReadmeContents next allows returning a readme with cypress 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn dev\`

## E2E Tests

- Run the app
- In another terminal, run \`yarn cypress\`
"
`;

exports[`getReadmeContents next allows returning a readme without cypress 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- Run \`yarn dev\`
"
`;

exports[`getReadmeContents node allows returning a readme with unit testing 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Unit Tests

- Run \`yarn test\`
"
`;

exports[`getReadmeContents node allows returning a readme without unit testing 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.
"
`;

exports[`getReadmeContents node with babel allows returning a readme with unit testing 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Unit Tests

- Run \`yarn test\`
"
`;

exports[`getReadmeContents node with babel allows returning a readme without unit testing 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)

## Installation

- Clone the repo
- Run \`yarn install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.
"
`;

exports[`getReadmeContents rn allows returning a readme with both unit testing and detox 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)
- [Ruby](https://www.ruby-lang.org/)
- [Cocoapods](https://cocoapods.org/)
- [Android Studio](https://developer.android.com/studio) and/or [Xcode](https://developer.apple.com/xcode/)

## Installation

- Clone the repo
- Run \`yarn install\`
- Run \`cd ios && pod install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- In one terminal, run \`yarn start\`
- In another terminal, run \`yarn android\` or \`yarn ios\`

## Unit Tests

- Run \`yarn test\`

## E2E Tests

- Run \`detox build -c ios.sim.debug\` (only needs to be run once per native code changes)
- Run \`detox test -c ios.sim.debug\`
"
`;

exports[`getReadmeContents rn allows returning a readme with detox 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)
- [Ruby](https://www.ruby-lang.org/)
- [Cocoapods](https://cocoapods.org/)
- [Android Studio](https://developer.android.com/studio) and/or [Xcode](https://developer.apple.com/xcode/)

## Installation

- Clone the repo
- Run \`yarn install\`
- Run \`cd ios && pod install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- In one terminal, run \`yarn start\`
- In another terminal, run \`yarn android\` or \`yarn ios\`

## E2E Tests

- Run \`detox build -c ios.sim.debug\` (only needs to be run once per native code changes)
- Run \`detox test -c ios.sim.debug\`
"
`;

exports[`getReadmeContents rn allows returning a readme with unit testing 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)
- [Ruby](https://www.ruby-lang.org/)
- [Cocoapods](https://cocoapods.org/)
- [Android Studio](https://developer.android.com/studio) and/or [Xcode](https://developer.apple.com/xcode/)

## Installation

- Clone the repo
- Run \`yarn install\`
- Run \`cd ios && pod install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- In one terminal, run \`yarn start\`
- In another terminal, run \`yarn android\` or \`yarn ios\`

## Unit Tests

- Run \`yarn test\`
"
`;

exports[`getReadmeContents rn allows returning a readme without any testing 1`] = `
"# My Project

Describe your project here.

## Requirements

- [Node](https://nodejs.org)
- [Yarn 1.x](https://classic.yarnpkg.com/lang/en/)
- [Ruby](https://www.ruby-lang.org/)
- [Cocoapods](https://cocoapods.org/)
- [Android Studio](https://developer.android.com/studio) and/or [Xcode](https://developer.apple.com/xcode/)

## Installation

- Clone the repo
- Run \`yarn install\`
- Run \`cd ios && pod install\`

Dependencies are locked with \`yarn.lock\`; please use \`yarn\` rather than \`npm\` for installing.

## Running

- In one terminal, run \`yarn start\`
- In another terminal, run \`yarn android\` or \`yarn ios\`
"
`;
